UI presentation table - fix overlap of box and header into action btn

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -13361,6 +13361,12 @@ div.alert ul > li:before {
 .il-table-presentation-row .il-table-presentation-actions {
   margin: 5px 0;
 }
+.il-table-presentation-row .il-table-presentation-actions:not(:empty) + .il-table-presentation-row-header {
+  max-width: calc(100% - 11rem);
+}
+.il-table-presentation-row .il-table-presentation-row-header {
+  min-height: 2rem;
+}
 .il-table-presentation-row .il-table-presentation-row-header h4 {
   font-size: 1rem;
   font-weight: 400;
